# em-cockpit

./: README.md  package-lock.json  package.json
specs/design/: The EM Cockpit Design.md
specs/requirement/: The EM Cockpit PRD.md
specs/steering/: product_context.md  project_context.md  tech_context.md
specs/task/: The EM Cockpit Task.md
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: incidents.rs  mod.rs  prs.rs  search.rs  settings.rs
src-tauri/src/core/: config.rs  errors.rs  events.rs  mod.rs
src-tauri/src/integrations/: mod.rs  traits.rs
src-tauri/src/integrations/ai/: gemini.rs  mod.rs
src-tauri/src/integrations/git/: mod.rs  provider.rs
src-tauri/src/integrations/jira/: client.rs  mod.rs
src-tauri/src/integrations/monitoring/: grafana.rs  mod.rs
src-tauri/src/security/: credential_manager.rs  mod.rs
src-tauri/src/services/: background_poller.rs  cache_service.rs  incident_monitor.rs  mod.rs  pr_aggregator.rs  search_service.rs
src-tauri/src/system/: hotkey.rs  mod.rs  tray.rs
src-tauri/tests/: integration_tests.rs
src/__tests__/: setup.ts
src/__tests__/components/: FlightConsole.spec.ts
src/assets/: animations.css  design-system.css
src/components/common/: Badge.vue  StatusDot.vue
src/components/panels/: PrCard.vue  PrRadar.vue
src/components/search/: FlightConsole.vue  SearchInput.vue  SearchResults.vue
src/composables/: useAnimation.ts  useTauri.ts
src/types/: index.ts
